user/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: user
  labels:
    app: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
        version: v1
    spec:
      containers:
        - name: user
          image: asia.gcr.io/stable-device-253005/go-grpc-microservices-user
          imagePullPolicy: Always
          ports:
            - name: grpc-port
              containerPort: 50051
              protocol: TCP
