user/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: user
  labels:
    app: user
spec:
  selector:
    app: user
  type: ClusterIP
  ports:
  - port: 50051
    targetPort: 50051
