user/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: user-rule
  namespace: user
spec:
  host: user-service.user.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
