user/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-route
  namespace: user
spec:
  hosts:
    - user-service.user.svc.cluster.local
  http:
    - match:
        - port: 50051
      route:
        - destination:
            host: user-service.user.svc.cluster.local
            subset: v1
